--- a/DominoGame.srv/DominoGame.srv/Dockerfile
+++ b/DominoGame.srv/DominoGame.srv/Dockerfile
@@ -1,25 +1,39 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+#FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+#USER app
+#WORKDIR /app
+#EXPOSE 8080
+#EXPOSE 8081
+#
+#FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+#ARG BUILD_CONFIGURATION=Release
+#WORKDIR /src
+#COPY ["DominoGame.srv/DominoGame.srv.csproj", "DominoGame.srv/"]
+#RUN dotnet restore "./DominoGame.srv/DominoGame.srv.csproj"
+#COPY . .
+#WORKDIR "/src/DominoGame.srv"
+#RUN dotnet build "./DominoGame.srv.csproj" -c $BUILD_CONFIGURATION -o /app/build
+#
+#FROM build AS publish
+#ARG BUILD_CONFIGURATION=Release
+#RUN dotnet publish "./DominoGame.srv.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+#
+#FROM base AS final
+#WORKDIR /app
+#COPY --from=publish /app/publish .
+#ENTRYPOINT ["dotnet", "DominoGame.srv.dll"]
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["DominoGame.srv/DominoGame.srv.csproj", "DominoGame.srv/"]
-RUN dotnet restore "./DominoGame.srv/DominoGame.srv.csproj"
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine as build
+WORKDIR /app
+EXPOSE 80
+EXPOSE 443
 COPY . .
-WORKDIR "/src/DominoGame.srv"
-RUN dotnet build "./DominoGame.srv.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet restore DominoGame.srv.csproj
+RUN dotnet publish -o /app/published-app
 
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./DominoGame.srv.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine as runtime
+RUN apk add icu 
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "DominoGame.srv.dll"]
+COPY --from=build /app/published-app /app
+ENTRYPOINT ["dotnet", "/app/DominoGame.srv.dll"]
