--- a/DominoGame.srv/DominoGame.srv/DominoGame.srv.csproj
+++ b/DominoGame.srv/DominoGame.srv/DominoGame.srv.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="SignalRSwaggerGen" Version="4.7.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
+	  <PackageReference Include="JiuLing.CommonLibs" Version="1.6.7" />
+
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
   </ItemGroup>
 
 </Project>
